syntax = "proto3";

option go_package = "/proto";

package cryptkv;

message PutRequest {
  // key in document bucket, only for storage
  string documentKey = 1;

  // value stored in document bucket
  string documentVal = 2;

  // generated by lookup key with salted HMAC
  bytes indexKey = 3;

  // generated by lookup key with salted HMAC
  bytes encryptKey = 4;
}

message PutResponse {
  bool ok = 1;
  int32 code = 2;
}

message GetRequest {
  // generated by lookup key with salted HMAC
  bytes indexKey = 1;

  // generated by lookup key with salted HMAC
  bytes encryptKey = 2;
}

message GetResponse {
  bool ok = 1;
  int32 code = 2;
  string documentKey = 3;
  string documentVal = 4;
}

message DeleteRequest {
  // generated by lookup key with salted HMAC
  bytes indexKey = 1;

  // generated by lookup key with salted HMAC
  bytes encryptKey = 2;
}

message DeleteResponse {
  bool ok = 1;
  int32 code = 2;
}

service CryptKV {
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}